--- a/README
+++ b/README
@@ -45,9 +45,8 @@ Makefile.inc. For instance, the gfortran flags are:
     FCFLAGS = -O -fopenmp
     LDFLAGS = -fopenmp
 
-Note the -fopenmp flag that enables shared-memory
-parallelization. Once you are satisfied with your choice of compiler
-options, do:
+Note the -fopenmp flag that enables shared-memory parallelization.
+Once you are satisfied with your choice of compiler options, do:
 
     make mrproper
     make
@@ -56,7 +55,7 @@ to build the nciplot executable. To clean the object and module files,
 
     make clean
 
-To clean objects, modules and binaries,
+To clean objects, modules, and binaries,
 
     make mrproper
 
@@ -66,8 +65,9 @@ variable to the absolute path to NCIplot:
 
     export NCIPLOT_HOME=/home/xxxx/programs/nciplot
 
-so that the dat directory is ${NCIPLOT_HOME}/dat/. Several tests and
-examples can be downloaded from:
+so that the dat directory is ${NCIPLOT_HOME}/dat/ and a link to the
+binary is located in ${NCIPLOT_HOME}/bin/. Several tests and examples
+can be downloaded from:
 
 http://schooner.chem.dal.ca/downloads/nciplot/
 
